# afmfold

./: .cursorignore  README.md  build_main.sh  build_supplementary.sh  pyproject.toml
notebooks/: example.ipynb
paper/: citation.bib  commands.tex  main.tex  preamble.tex
paper/preparation/: biophys-new.cls  biophysj.tex  biophysj_SI.tex  citation_biophysj.bib  commands.tex
paper/preparation/sections/: af3.tex  afmfold.tex  appendix.tex  endmatter.tex  results.tex
paper/sections/: abstract.tex  af3.tex  afmfold.tex  appendix.tex  cnn.tex  conclusion.tex  discussion.tex  introduction.tex  md.tex  methods.tex  related_work.tex  results.tex  significance.tex
scripts/: SCRIPTS.md  generate_images.py  inference.py  train.py
src/afmfold/: cnn.py  domain.py  images.py  inference.py  rigid_body_fitting.py  train.py  utils.py  visualization.py
src/afmfold/configs/: configs_base.py  configs_data.py  configs_inference.py
src/afmfold/protenix/utils/: cropping.py  file_io.py  metrics.py
src/afmfold/protenix/utils/permutation/: atom_permutation.py  permutation.py
src/afmfold/protenix/utils/permutation/chain_permutation/: __init__.py  heuristic.py  pocket_based_permutation.py  utils.py
src/afmfold/runner/: batch_inference.py  dumper.py  inference.py  msa_search.py  train.py
storage/: ak.dcd  real_afm_histogram.npy
storage/domain/ak/: ampbd.npy  atpbd.npy  core.npy
storage/domain/flhac/: acd1.npy  acd2.npy  acd3.npy  acd4.npy
